--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -12,7 +12,7 @@ source:
   sha256: 20fa58ca50c9ccf4c48a7ff26b1fe3cd37ff23dd0d552c2b8f8c3e4572e07b2c
 
 build:
-  number: 0
+  number: 1
   skip: true  # [win32]
   rpaths:
     - lib/R/lib/
@@ -38,6 +38,7 @@ about:
 
 extra:
   recipe-maintainers:
+    - dpryan79
     - bgruening
     - daler
     - johanneskoester
