--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -27,10 +27,12 @@ requirements:
     - r-base
     - r-biocmanager
     - r-rlang
+    - r-yulab.utils
   run:
     - r-base
     - r-biocmanager
     - r-rlang
+    - r-yulab.utils
 
 test:
   commands:
